add js playground for note taking
Co-authored-by: Cristina Plesa <cristinaplesa8@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link href="css/core.css" rel="stylesheet" type="text/css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
+  <!--<script src="js/playground.js"></script>-->
   <title>TITLE</title>
 </head>
 <body>
