add movie selector rendered by jquery sourced from NOW_SHOWING

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang='en-us'>
 <head>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/core.css" rel="stylesheet" type="text/css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
   <!--<script src="js/playground.js"></script>-->
-  <title>TITLE</title>
+  <title>Galactic Movie Theater</title>
 </head>
 <body>
-  <header></header>
+  <header>Galactic Movie Theater</header>
   <main>
-  
+    <h2>Enter information to see our ticket prices!</h2>
+    <form id="new-movie">
+      <div class="form-group" id='movie-options'>
+      </div>
+    </form>
   </main>
   <footer></footer>
 </body>
